# agent_workshop

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
stages/stage0/: README.md  __init__.py  demo.py
stages/stage1/: README.md  demo.py
stages/stage1/activity/: code_task.py  starter_agent.py
stages/stage2/: README.md  demo.py
stages/stage2/activity/: starter_agent.py
stages/stage2/mcp_servers/: curriculum_server.py
stages/stage3/: README.md  demo.py
stages/stage3/activity/: server.py  starter_workflow.py
utils/: bash_tool.py  ollama_adaptor.py  verbose.py  workspace_path.py
utils/tools/: __init__.py  bash.py  read_file.py  write_file.py
