[project]
name = "agent-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.3.0",
    "openai>=1.52.0",
    "mcp>=0.1.2",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]
